# codec-bench

./: .gitattributes  .gitignore  README.md  bench.ipynb  bench.py  pyproject.toml
examples/: codec_benchmark_summary.tsv
